--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
  
      <!-- Links section 1. Replace the # inside of the "" with your links. -->
      <div class="links-container">
-       <a href="#" class="w3-button w3-hover-blue w3-large w3-yellow" style="width: 350px;" target="_blank"></i>Travel</a>
+       <a href="https://github.com/tylergames42" class="w3-button w3-hover-blue w3-large w3-yellow" style="width: 350px;" target="_blank"></i>Github</a>
        <a href="#" class="w3-button w3-hover-blue w3-large w3-yellow" style="width: 350px;" target="_blank"></i>Experiences</a>
        <a href="#" class="w3-button w3-hover-blue w3-large w3-yellow" style="width: 350px;" target="_blank"></i>Creative</a>
        <a href="#" class="w3-button w3-hover-blue w3-large w3-yellow" style="width: 350px;" target="_blank"></i>Blog</a>
